remove duplicate email check